# QURI-PROTOCOL

./: .editorconfig  .gitignore  ACTIVACION-COMPLETA.md  ARCHITECTURAL_ANALYSIS_2025.md  ARCHITECTURE.md  AUDIT_REPORT_2025-11-24.md  BACKUP_QUICKSTART.md  BITCOIN_NATIVE_ROADMAP.md  CANISTER_INTEGRATION_COMPLETE.md  CHANGELOG.md  CURRENT_STATUS.md  Cargo.toml  DECISION_CKBTC_INTEGRATION.md  DEEP_DIVE_ANALYSIS_2025.md  DEPLOYMENT-COMPLETE.md  DEPLOYMENT-GUIDE-RAPIDO.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST_LIST_RUNES.md  DEPLOYMENT_READY.md  DEPLOYMENT_SUCCESS_REPORT.md  DESARROLLO-LOCAL-COMPLETO.md  DEX_DESIGN.md  EMPEZAR_TESTNET.md  EXPLORER_FIX_SUMMARY.md  FASE_1_COMPLETADA.md  FINAL_SUMMARY.md  FRONTEND_MODERNIZATION_PLAN.md  FRONTEND_OPTIMIZATION_COMPLETE.md  GAP_ANALYSIS_FINAL.md  GAP_IMPLEMENTATION_COMPLETE.md  GUIA-ACTIVACION-COMPLETA.md  GUIA_ESTUDIANTE_FRONTEND.md  HACKATHON_DEPLOYMENT_SUMMARY.md  HACKATHON_GUIDE.md  HACKATHON_PRESENTATION.md  HACKATHON_STRATEGY.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.txt  IMPLEMENTING_LIST_RUNES.md  INSTRUCCIONES-API-KEY.md  (+40 more)
.claude/: QUICK_REFERENCE.md  README.md
.claude/agents/: bitcoin-runes.md  devops-deploy.md  frontend-react.md  rust-icp-backend.md  security-audit.md  testing-qa.md
.claude/commands/: analyze-cycles.md  debug-etching.md  deploy-check.md  icp-docs.md  project-status.md  quick-deploy.md  test-canister.md
.github/workflows/: ci.yml
backend/: CLAUDE.md  Cargo.toml  WASM_BUILD_FIX.md  canister_ids.json  dfx.json
backend/canisters/bitcoin-integration/: CONFIRMATION_TRACKING.md  Cargo.toml  bitcoin_integration.did
backend/canisters/bitcoin-integration/src/: bitcoin_api.rs  ckbtc.rs  config.rs  confirmation_tracker.rs  lib.rs  schnorr.rs  utxo.rs
backend/canisters/bridge/: Cargo.toml
backend/canisters/bridge/src/: lib.rs
backend/canisters/dex/: Cargo.toml
backend/canisters/dex/src/: amm.rs  farming.rs  lib.rs  orderbook.rs  router.rs
backend/canisters/identity-manager/: Cargo.toml
backend/canisters/registry/: ADMIN_GUARDS.md  CHECKLIST.md  Cargo.toml  FILE_STRUCTURE.txt  IMPLEMENTACION_COMPLETA.md  SECURITY_AUDIT.md  STAKING_CHANGES.md  STAKING_MIGRATION.md  registry.did
backend/canisters/registry/examples/: admin_usage.sh
backend/canisters/registry/src/: admin.rs  bitcoin_client.rs  ckbtc_integration.rs  indexer.rs  lib.rs  metrics.rs  octopus_integration.rs  parser.rs  rate_limit.rs  staking.rs
backend/canisters/rune-engine/: Cargo.toml  ESCROW_ROLLBACK.md  TESTING.md  TEST_SUMMARY.md  rune_engine.did
backend/canisters/rune-engine/src/: balances.rs  block_tracker.rs  config.rs  confirmation_tracker.rs  cycles_monitor.rs  dead_man_switch.rs  encrypted_metadata.rs  errors.rs  escrow.rs  etching_flow.rs  etching_flow_tests.rs  fee_manager.rs  idempotency.rs  ledger.rs  lib.rs  metrics.rs  rbac.rs  settlement.rs  state.rs  state_tests.rs  trading.rs  trading_v2.rs  validators.rs
backend/canisters/wrunes_ledger/: Cargo.toml
backend/canisters/wrunes_ledger/src/: lib.rs
backend/deployments/: mainnet-20251121-current.txt
backend/libs/bitcoin-utils/: Cargo.toml
backend/libs/bitcoin-utils/src/: address.rs  script.rs  transaction.rs
backend/libs/quri-types/src/: lib.rs  pagination.rs  rune_key.rs  rune_key_tests.rs  rune_metadata.rs  rune_metadata.rs.bak  storable_impl.rs  validation_tests.rs
backend/libs/quri-utils/: Cargo.toml
backend/libs/quri-utils/src/: lib.rs  validation.rs
backend/libs/runes-utils/src/: etching.rs
backend/libs/schnorr-signatures/: Cargo.toml
backend/libs/schnorr-signatures/src/: lib.rs
backend/scripts/: build-wasm.sh
backend/scripts/deployment/: README.md  configure-rune-engine.sh  deploy-backend.sh  deploy-frontend.sh  deploy-local.sh  deploy-mainnet-complete.sh  deploy-production.sh  deploy-testnet.sh  start-frontend.sh  test-etching.sh  testnet-quickstart.sh  update-frontend-env.sh
backend/tests/: Cargo.toml  README.md  integration_test.rs
canisters/bitcoin-integration/: Cargo.toml  bitcoin_integration.did
canisters/identity-manager/: identity_manager.did
canisters/marketplace/: README.md
canisters/ordinals-engine/: README.md
canisters/registry/: Cargo.toml  registry.did
canisters/registry/src/: indexer.rs  lib.rs  lib_new.rs  parser.rs
canisters/rune-engine/: Cargo.toml  rune_engine.did
canisters/rune-engine/src/: config.rs  confirmation_tracker.rs  cycles_monitor.rs  errors.rs  etching_flow.rs  idempotency.rs  lib.rs  logging.rs  metrics.rs  process_id.rs  rbac.rs  state.rs  validators.rs
docs/: BACKUP_SYSTEM.md  HACKATHON_FEATURES.md  MIGRATION_PINATA_SECURITY.md  README.md  REGISTRY_API.md
docs/01-getting-started/: README.md
docs/02-architecture/: ARCHITECTURE.es.md  ARCHITECTURE_ANALYSIS_AND_IMPROVEMENTS.md  (+4 more)
frontend/: .env.example  .env.local.example  .env.production.example  ARCHITECTURE_SUMMARY.md  AUDIT_COMMANDS.md  AUDIT_INDEX.md  AUDIT_REPORT.md  AUDIT_SUMMARY.md  BACKEND_INTEGRATION_COMPLETE.md  CURRENT_STATUS_AND_NEXT_STEPS.md  EXPLORER_ARCHITECTURE.md  FRONTEND_COMPLETE.md  IMPLEMENTATION_ROADMAP.md  LOCAL_TESTING_GUIDE.md  MIGRATION_PLAN.md  MODERN_COMPONENTS_GUIDE.md  MODULAR_ARCHITECTURE.md  MUSEUM_DESIGN_STRATEGY.md  PREMIUM_IMPLEMENTATION_COMPLETE.md  PROJECT_STATUS.md  README.md  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
libs/bitcoin-utils/: Cargo.toml
libs/bitcoin-utils/src/: lib.rs  transaction.rs
libs/quri-types/: Cargo.toml
libs/quri-types/src/: lib.rs  pagination.rs  rune_metadata_tests.rs  storable_impl.rs  validation.rs
libs/runes-utils/: Cargo.toml
libs/runes-utils/src/: lib.rs  runestone.rs  tag.rs
scripts/: README.md  backup-canisters.sh  crontab.example  deploy-playground.sh  deploy.sh  generate-vercel-env.sh  monitor-cycles.sh  restore-canister.sh  runes-indexer.ts  sync-all-runes.sh  sync-gradual.sh  sync-runes-mainnet.sh  test-deployment.sh  verify-pinata-security.sh
tools/deployment/: Cargo.toml
tools/deployment/src/: main.rs
tools/testing-suite/: Cargo.toml
tools/testing-suite/src/: main.rs
(+391 files in other folders)
