[workspace]
resolver = "2"
members = [
    # Core Canisters
    "canisters/rune-engine",
    "canisters/bitcoin-integration",
    "canisters/registry",
    "canisters/identity-manager",

    # Shared Libraries
    "libs/quri-types",
    "libs/quri-utils",
    "libs/bitcoin-utils",
    "libs/runes-utils",
    "libs/schnorr-signatures",

    # Testing & Tools
    "tools/deployment",
    "tools/testing-suite",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["QURI Protocol Team"]
license = "MIT"
repository = "https://github.com/AndeLabs/QURI-PROTOCOL"

[workspace.dependencies]
# ICP Dependencies
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-macros = "0.13"
ic-cdk-timers = "0.7"
ic-stable-structures = "0.6"
ic-ledger-types = "0.11"

# Bitcoin & Crypto
bitcoin = { version = "0.31", features = ["serde"] }
secp256k1 = { version = "0.28", features = ["recovery", "global-context"] }
sha2 = "0.10"
ripemd = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
hex = "0.4"
base64 = "0.21"
regex = "1.10"

# Async
futures = "0.3"

# Testing
mockall = "0.12"
proptest = "1.4"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce parallel codegen for better optimization
strip = true        # Strip symbols from binary
panic = 'abort'     # Don't include unwinding tables

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1
