[workspace]
resolver = "2"

members = [
    "canisters/registry",
    "canisters/rune-engine",
    "canisters/bitcoin-integration",
    "canisters/identity-manager",
    "canisters/marketplace",
    "canisters/ordinals-engine",
    "libs/quri-types",
    "libs/quri-utils",
    "libs/bitcoin-utils",
    "libs/runes-utils",
    "libs/schnorr-signatures",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-macros = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
