[package]
name = "quri-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# ICP
candid.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Bitcoin
bitcoin.workspace = true

[dev-dependencies]
serde_json.workspace = true
