[package]
name = "testing-suite"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "test-runner"
path = "src/main.rs"

[dependencies]
# Internal
quri-types = { path = "../../libs/quri-types" }

# Utilities
anyhow.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
