[package]
name = "quri-bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.12"
ic-cdk-macros = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"

# For Bitcoin verification
bitcoin = { version = "0.30", default-features = false }

[dev-dependencies]
candid = "0.10"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
