[package]
name = "wrunes-ledger"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.12"
ic-cdk-macros = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"

# ICRC standards
icrc-ledger-types = "0.1"

[dev-dependencies]
candid = "0.10"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
