[package]
name = "bitcoin-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal
quri-types = { path = "../quri-types" }

# ICP (for types)
ic-cdk.workspace = true

# Bitcoin (includes secp256k1)
bitcoin.workspace = true

# Crypto
sha2.workspace = true
ripemd.workspace = true

# Utilities
hex.workspace = true

# Error Handling
thiserror.workspace = true

# Serialization
serde.workspace = true

[dev-dependencies]
proptest.workspace = true
