[package]
name = "quri-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal
quri-types = { path = "../quri-types" }

# Crypto
sha2.workspace = true

# Utilities
hex.workspace = true
regex.workspace = true

# Error Handling
thiserror.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
proptest.workspace = true
