[package]
name = "schnorr-signatures"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal
quri-types = { path = "../quri-types" }

# Crypto
secp256k1.workspace = true
sha2.workspace = true

# Utilities
hex.workspace = true

# Error Handling
thiserror.workspace = true

# Serialization
serde.workspace = true

[dev-dependencies]
proptest.workspace = true
