[package]
name = "schnorr-signatures"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal
quri-types = { path = "../quri-types" }

# Bitcoin (includes secp256k1)
bitcoin.workspace = true

# Crypto
sha2.workspace = true

# Utilities
hex.workspace = true

# Error Handling
thiserror.workspace = true

# Serialization
serde.workspace = true

[dev-dependencies]
proptest.workspace = true
